# edgepredict-engine

./: CMakeLists.txt
.github/workflows/: build_windows.yml
include/: GeometricAnalyzer.h  IPhysicsStrategy.h  MillingStrategy.h  PhysicsData.h  RotationalFEA.h  SPHWorkpieceModel.h  SpatialHash.h  ToolGenerator.h  TurningStrategy.h  navier_stokes.h  particle_system.h  physics_models.h
src/: GeometricAnalyzer.cpp  MillingStrategy.cpp  RotationalFEA.cpp  SPHWorkpieceModel.cpp  ToolGenerator.cpp  TurningStrategy.cpp  main.cpp  navier_stokes.cpp  particle_system.cpp
